--- a/public/index.html
+++ b/public/index.html
@@ -47,5 +47,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="http://localhost:8080/socket.io/socket.io.js"></script>
   </body>
 </html>
