--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CRISP SOUND</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -51,6 +51,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="http://localhost:8080/socket.io/socket.io.js"></script>
+    <script src="http://ec2-52-79-250-14.ap-northeast-2.compute.amazonaws.com:8080/socket.io/socket.io.js"></script>
   </body>
 </html>
