--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
       href="https://fonts.googleapis.com/css?family=Hind+Siliguri&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Jua&display=swap"
+      rel="stylesheet"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
